passes test of Kruskal coords; code for transitioning vectors from Sch. to Kruskal

--- a/maxima/Makefile
+++ b/maxima/Makefile
@@ -1,3 +1,9 @@
 christoffel:
-	maxima -b maxima/christoffel.mac
+	maxima -b christoffel.mac
 	# Now cut and paste output into maxima/clean_up_christoffel.rb and run it.
+
+jacobian:
+	jacobian.rb >jacobian.mac
+	maxima --very-quiet -r "load(\"jacobian.mac\")$$"
+	# Now cut and paste output into maxima/clean_up_jacobian.rb and run it.
+
