lambert_w_of_exp() implemented and tested

--- a/maxima/Makefile
+++ b/maxima/Makefile
@@ -1,9 +1,4 @@
-christoffel:
-	maxima -b christoffel.mac
-	# Now cut and paste output into maxima/clean_up_christoffel.rb and run it.
+schwarzschild5:
+	maxima -b schwarzschild5.mac
 
-jacobian:
-	jacobian.rb >jacobian.mac
-	maxima --very-quiet -r "load(\"jacobian.mac\")$$"
-	# Now cut and paste output into maxima/clean_up_jacobian.rb and run it.
 
