christoffel symbols for arcsinh-KS seem to work, but need massaging for overflows

--- a/maxima/Makefile
+++ b/maxima/Makefile
@@ -1,4 +1,13 @@
+kruskal5:
+	maxima -b kruskal5.mac
+	# Cut and paste output into clean_up_christoffel.rb.
+
 schwarzschild5:
 	maxima -b schwarzschild5.mac
+	# Cut and paste output into clean_up_christoffel.rb.
+
+
+
+
 
 
